--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,22 +17,18 @@ const metadata = {
 
   <Hero
     tagline="About us"
-    video={{
-      src: '/videos/laptop-code.mp4',
-      type: 'video/mp4',
-    }}
-    poster="/videos/laptop.jpg"
+    muxPlaybackId="h201PJtvABKQ7SXq2Ae1PEMcFe0002WCzNq702017kDObAow"
   >
-
     <Fragment slot="title">
       Next-Generation Static Architecture<br />
       <span class="text-accent dark:text-white">Redefining Digital Standards</span>
     </Fragment>
 
     <Fragment slot="subtitle">
-      Rebirth Web Design is redefining digital standards with next-generation static architecture that's gaining traction in Bundaberg’s tech scene. With over a decade of hands-on coding expertise and AI-assisted workflows that accelerate prototyping and delivery, we build on Astro’s island rendering and Tailwind’s atomic utilities to create sites with exceptional performance, seamless interactivity, and stunning responsive design—elevating Core Web Vitals, accessibility, and edge delivery for modern brands.
+      Rebirth Web Design is redefining digital standards with next-generation static architecture that's gaining traction in Bundaberg's tech scene. With over a decade of hands-on coding expertise and AI-assisted workflows that accelerate prototyping and delivery, we build on Astro's island rendering and Tailwind's atomic utilities to create sites with exceptional performance, seamless interactivity, and stunning responsive design—elevating Core Web Vitals, accessibility, and edge delivery for modern brands.
     </Fragment>
   </Hero>
+
 
 <Steps2
   title="Our Values"
@@ -84,7 +80,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/feat4.webp',
+      src: '~/assets/images/about/launch.webp',
       alt: 'Steps image',
     }}
   />
