--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import HeroText from '~/components/widgets/HeroText.astro';
+import Hero from '~/components/widgets/Hero.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 import Features2 from '~/components/widgets/Features2.astro';
 
@@ -10,9 +10,13 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <!-- HeroText Widget ******************* -->
+  <!-- Hero Widget ******************* -->
 
-  <HeroText tagline="Contact" title="Let's Connect!" />
+  <Hero
+    tagline="Contact"
+    title="Let's Connect!"
+    image={{ src: '~/assets/images/home/hero-image.webp', alt: 'Contact Rebirth Web Design' }}
+  />
 
   <ContactUs
     id="form"
