--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const metadata = {
       },
       { text: 'How We Work', href: '/about' },
     ]}
-    image={{ src: '~/assets/images/hero-image.webp', alt: 'Rebirth Web Design' }}
+    image={{ src: '~/assets/images/home/hero-image.webp', alt: 'Rebirth Web Design' }}
   >
     <Fragment slot="title">
       High-performance websites<br class="hidden xl:block" />
@@ -119,7 +119,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/feat1.webp',
+      src: '~/assets/images/home/feat1.webp',
       alt: 'Modern development workspace',
       class: 'mx-auto w-full',
     }}
@@ -162,7 +162,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/feat2.webp',
+      src: '~/assets/images/home/feat2.webp',
       alt: 'Design blueprint',
       class: 'mx-auto w-full',
     }}
@@ -203,7 +203,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/feat3.webp',
+      src: '~/assets/images/home/feat3.webp',
       alt: 'Future-focused design',
       class: 'mx-auto w-full',
     }}
@@ -346,7 +346,7 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Start Your Project',
-        href: '#',
+        href: '/contact',
         icon: 'tabler:rocket',
       },
     ]}
