--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -12,6 +12,7 @@ import { getStaticPathsBlogPost, blogPostRobots } from '~/utils/blog';
 import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
 import RelatedPosts from '~/components/blog/RelatedPosts.astro';
+import { SITE } from 'astrowind:config';
 
 export const prerender = true;
 
@@ -26,6 +27,42 @@ const { post } = Astro.props as Props;
 const url = getCanonical(getPermalink(post.permalink, 'post'));
 const image = (await findImage(post.image)) as ImageMetadata | string | undefined;
 
+// Prepare image URL for structured data
+const imageUrl = typeof image === 'string'
+  ? image
+  : image
+    ? new URL(image.src, SITE.site || Astro.site).toString()
+    : undefined;
+
+// BlogPosting structured data schema
+const schema = {
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": post.title,
+  "description": post.excerpt,
+  "image": imageUrl,
+  "datePublished": post.publishDate.toISOString(),
+  ...(post.updateDate ? { "dateModified": post.updateDate.toISOString() } : {}),
+  "author": {
+    "@type": "Person",
+    "name": post.author || "Alex Harris"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Rebirth Web Design",
+    "logo": {
+      "@type": "ImageObject",
+      "url": new URL("/favicon.svg", SITE.site || Astro.site).toString()
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": url
+  },
+  ...(post.category ? { "articleSection": post.category.title } : {}),
+  ...(post.tags && post.tags.length > 0 ? { "keywords": post.tags.map(tag => tag.title).join(", ") } : {})
+};
+
 const metadata = merge(
   {
     title: post.title,
@@ -37,7 +74,14 @@ const metadata = merge(
     openGraph: {
       type: 'article',
       ...(image
-        ? { images: [{ url: image, width: (image as ImageMetadata)?.width, height: (image as ImageMetadata)?.height }] }
+        ? {
+            images: [{
+              url: image,
+              width: (image as ImageMetadata)?.width,
+              height: (image as ImageMetadata)?.height,
+              alt: post.imageAlt || post.excerpt || post.title
+            }]
+          }
         : {}),
     },
   },
@@ -46,6 +90,9 @@ const metadata = merge(
 ---
 
 <Layout metadata={metadata}>
+  <Fragment slot="head">
+    <script type="application/ld+json" set:html={JSON.stringify(schema)} />
+  </Fragment>
   <SinglePost post={{ ...post, image: image }} url={url}>
     {post.Content ? <post.Content /> : <Fragment set:html={post.content || ''} />}
   </SinglePost>
