--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -1,7 +1,9 @@
 ---
 import { Icon } from 'astro-icon/components';
+import { Image } from 'astro:assets';
 import { SITE } from 'astrowind:config';
 import { getHomePermalink } from '~/utils/permalinks';
+import logo from '~/assets/images/logo/logo.webp';
 
 interface Link {
   text?: string;
@@ -34,7 +36,17 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
+          <a class="inline-flex items-center gap-2 font-bold text-xl" href={getHomePermalink()}>
+            <Image
+              src={logo}
+              alt="Rebirth"
+              class="h-8 w-auto"
+              width={200}
+              height={200}
+              loading="lazy"
+            />
+            <span>Web Design</span>
+          </a>
         </div>
         <div class="text-sm text-muted flex gap-1">
           {
