--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -36,7 +36,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-flex items-center gap-2 font-bold text-xl" href={getHomePermalink()}>
+          <a class="inline-flex items-center gap-1 font-bold text-2xl" href={getHomePermalink()}>
             <Image
               src={logo}
               alt="Rebirth"
@@ -45,7 +45,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
               height={200}
               loading="lazy"
             />
-            <span>Web Design</span>
+            <span class="text-white">WebDesign</span>
           </a>
         </div>
         <div class="text-sm text-muted flex gap-1">
