--- a/src/components/common/StructuredData.astro
+++ b/src/components/common/StructuredData.astro
@@ -1,40 +1,37 @@
 ---
-import { SITE } from 'astrowind:config';
+---
 
-const schema = {
+<script type="application/ld+json">
+{
   "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "@id": "https://rebirthwebdesign.com.au/#organization",
-  "name": "Rebirth Web Design",
+  "@type": ["Organization", "LocalBusiness"],
+  "name": "Rebirth Web Design Bundaberg",
   "url": "https://rebirthwebdesign.com.au",
-  "logo": "https://rebirthwebdesign.com.au/favicon.svg",
-  "description": "Modern, high-performance static websites for Bundaberg businesses using Astro and Tailwind CSS. Fast, secure, and built for growth.",
-  "email": "hello@rebirthwebdesign.com.au",
-  "telephone": "+61488162040",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Bundaberg",
-    "addressRegion": "QLD",
-    "addressCountry": "AU"
-  },
-  "areaServed": {
-    "@type": "GeoCircle",
-    "geoMidpoint": {
-      "@type": "GeoCoordinates",
-      "latitude": "-24.8661",
-      "longitude": "152.3489"
-    },
-    "geoRadius": "50000"
-  },
-  "priceRange": "$$",
-  "sameAs": [
-    "https://twitter.com/arthelokyo"
-  ],
+  "logo": "https://rebirthwebdesign.com.au/_astro/logo.DPV17xz5_Z1HguKh.webp",
+  "description": "Modern, high-performance web design services in Bundaberg, Queensland",
   "founder": {
     "@type": "Person",
     "name": "Alex Harris"
-  }
-};
----
-
-<script type="application/ld+json" set:html={JSON.stringify(schema)} />
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "4A Hinkler Avenue",
+    "addressLocality": "Bundaberg North",
+    "addressRegion": "QLD",
+    "postalCode": "4670",
+    "addressCountry": "AU"
+  },
+  "contactPoint": [
+    {
+      "@type": "ContactPoint",
+      "telephone": "+61 488 162 040",
+      "email": "hello@rebirthwebdesign.com.au",
+      "contactType": "customer service"
+    }
+  ],
+  "sameAs": [
+    "https://www.instagram.com/rebirthwd/",
+    "https://www.facebook.com/rebirthwd/"
+  ]
+}
+</script>
